# multiplechoiceknapsacksolver

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
data/: test_dynamic_programming_bellman_array_all.txt  test_milp.txt
include/multiplechoiceknapsacksolver/: algorithm_formatter.hpp  generator.hpp  instance.hpp  instance_builder.hpp  solution.hpp
include/multiplechoiceknapsacksolver/algorithms/: dynamic_programming_bellman.hpp  milp.hpp
scripts/: download_data.py  generate_data.py  solve_test_data.py
src/: CMakeLists.txt  algorithm_formatter.cpp  generator.cpp  generator_main.cpp  instance.cpp  instance_builder.cpp  main.cpp  solution.cpp
src/algorithms/: CMakeLists.txt  dynamic_programming_bellman.cpp  milp.cpp
test/algorithms/: CMakeLists.txt  dynamic_programming_bellman_test.cpp  milp_test.cpp  tests.cpp  tests.hpp
